# dusa

./: Cargo.toml  dusad.service  makefile  test_2
src/: dusad.service  makefile
src/client/: cli.rs  client.rs  log.rs  main.rs
src/daemon/: errors.rs  main.rs  response_err.rs  server.rs
src/shared/: main.rs  prefix.rs  shared.rs  warn.rs
