[package]
name = "dusa"
version = "0.1.1"
edition = "2021"
authors = ["Darrion <dwhitfield@ramfield.net>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["wrap_help", "cargo"] }
clap_complete = "4.4"
clap_mangen = "0.2"
nix = "0.20"
users = "0.9.0"
hex = "0.4.3"
recs = { git = "https://github.com/Dj-Codeman/recs.git" }
logging = { git = "https://github.com/Dj-Codeman/logger.git" }
system = { git = "https://github.com/Dj-Codeman/system.git" }
pretty = { git = "https://github.com/Dj-Codeman/pretty.git" }
libc = "0.2.139"

[[bin]]
name = "server"
path = "src/daemon/main.rs"

[[bin]]
name = "cli"
path = "src/client/main.rs"

[lib]
name = "common"
path = "src/shared/main.rs"