[package]
name = "dusa"
version = "1.2.1"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["wrap_help", "cargo"] }
clap_complete = "4.4"
clap_mangen = "0.2"
system = { git = "https://github.com/Dj-Codeman/system.git"}
# Serialization/deserialization library
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pretty = { git = "https://github.com/Dj-Codeman/pretty.git" }
recs = { git = "https://github.com/Dj-Codeman/recs.git" }
logging = { git = "https://github.com/Dj-Codeman/logger.git" }
nix = "0.20"
users = "0.9.0"


[[bin]]
name = "server"
path = "src/daemon/server.rs"

[[bin]]
name = "client"
path = "src/client/client.rs"

[lib]
name = "dusa_common"
path = "src/shared/shared.rs"