[package]
name = "dusa"
version = "1.2.4"
edition = "2021"
license = "MIT"
description = "A client and server model application for encrypting files and texted based on recs_lib"

[dependencies]
clap = { version = "4.4", features = ["wrap_help", "cargo"] }
clap_complete = "4.4"
clap_mangen = "0.2"
dusa_collection_utils = "2.3.2"
# Serialization/deserialization library
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_pretty = "0.1.0"
recs_lib = "2.5.2"
simple_tmp_logger = "1.2.1"
nix = "0.20"
users = "0.9.0"


[[bin]]
name = "server"
path = "src/daemon/server.rs"

[[bin]]
name = "client"
path = "src/client/client.rs"

[lib]
name = "dusa_common"
path = "src/shared/shared.rs"
